# object_detection

./: .gitignore  99-edgetpu.rules  README.md  dependencies.repos  install_pycoral.sh  package.xml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-test.yaml
config/: model.yaml  ros_params.yaml
launch/: object_detection.launch.py  ros2_example.launch.py
models/: smarty_labels.txt
object_detection/: object_detection_node.py
object_detection/detector/: SSD.py  __init__.py  detect.py
test/: test_copyright.py  test_flake8.py  test_pep257.py
