<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.1</version>
  <description>The object detection of the smarty project</description>
  <maintainer email="info@dhbw-smartrollerz.org">DHBW Smart Rollerz</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>timing</depend>
  <depend>setup_utils</depend>
  <depend>camera_preprocessing</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
